Fix Habit-stats column gap cross-browser compatibility

--- a/css/habit-stats.css
+++ b/css/habit-stats.css
@@ -23,13 +23,13 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  column-gap: 1rem;
+  grid-column-gap: 1rem;
 }
 .stat-row > * {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  column-gap: 0.4rem;
+  grid-column-gap: 0.4rem;
 }
 .stat {
   font-weight: bold;
